--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
+body{
+    font-family: 'Poppins', sans-serif;
+}
+.text-shadow{
+    text-shadow: 5px 5px  black;
+}
+.text-shadow1{
+    text-shadow: 4px 3px  black;
+}
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
